2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Writing REPL tests): New section.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.repl/repl.exp (tab-completion-1): New test.

2020-04-10  Tim Rühsen  <tim.ruehsen@gmx.de>

	* lib/pkl.c (pkl_new): Return NULL instead of calling exit.
	* lib/pkl.h (pkl_new): Add function description.

2020-04-11  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/Makefile.am (.pks.pkc): Cause make to stop with an error if
	ras fails.

2020-04-11  Bruno Haible  <bruno@clisp.org>

	Make 'git status' empty after "make distclean".
	* .gitignore: Ignore generated files that are distributed in the
	tarball.

2020-04-11  Bruno Haible  <bruno@clisp.org>

	Clean some generated files.
	* lib/Makefile.am: Delete pkl-tab.output during 'make mostlyclean'.
	* src/Makefile.am: Delete nodelist during 'make mostlyclean'.
	* .gitignore: Update accordingly.

2020-04-11  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/Makefile.am (.pks.pkc): Remove partially generated .pks
	files when ras fails for some reason.

2020-04-11  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pk-utils.c: Include stdlib.h.

2020-04-11  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pvm.h (PVM_OK): Define.
	(PVM_ERROR): Likewise.
	* lib/pvm-val.c: Include pvm-program.h.
	* lib/pvm-program.h: Move program point definitions here from
	pvm.h.
	* lib/pvm-program.c (pvm_program_append_instruction): Return
	status codes.
	(pvm_program_append_label): Likewise.
	(pvm_program_append_label_parameter): Likewise.
	(pvm_program_append_register_parameter): Likewise.
	(pvm_program_append_unsigned_parameter): Liikewise.
	(pvm_program_append_val_parameter): Likewise.
	(pvm_program_append_push_instruction): Likewise.
	(pvm_program_make_executable): Likewise.

2020-04-11  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING: Updates on coding conventions.
	* lib/pvm.h (pvm_obase): Document.
	(pvm_set_obase): Likewise.
	(pvm_omode): Likewise.
	(pvm_set_omode): Likewise.