@@ -1,5 +1,11 @@
 2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/poke.repl/repl.exp: Rewrite tests to be more
+	self-contained, and add some notes.
+	* HACKING (Writing REPL tests): Updated.
+
+2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* HACKING (Writing REPL tests): New section.
 
 2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>
